fixed spacing for contact info

--- a/src/assets/stylesheets/contactInfo.css
+++ b/src/assets/stylesheets/contactInfo.css
@@ -26,7 +26,7 @@
 .contact-info-section .contact-info {
   grid-column: 1 / span 5;
   grid-row: 2;
-  margin: 0 auto;
+  margin: -8% auto;
   text-align: center;
   font-size: 1.4em;
 }
